Enable proximity sensor on boot.

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -434,6 +434,8 @@ on boot
     # set RLIMIT_NICE to allow priorities from 19 to -20
     setrlimit 13 40 40
 
+    write /sys/devices/virtual/proximity/proximity/enable 1
+
     # Memory management.  Basic kernel parameters, and allow the high
     # level system server to be able to adjust the kernel OOM driver
     # parameters to match how it is managing things.
